test/Fail/Issue2004Comp.err
Issue2004Comp.agda:13.5-8: error: [UnequalTerms]
Set₁ !=< (x : A) → P x
when checking that the expression Set has type (x : A) → P x
